# api-generator

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
api_forge/: __init__.py  analyzer_factory.py
api_forge/ai/: __init__.py  agents.py  client.py  config.py  prompts.py
api_forge/cli/: __init__.py  main.py
api_forge/cli/commands/: __init__.py  generate.py  init.py  json_generate.py  main.py  migrate.py  serve.py  test.py
api_forge/core/: __init__.py  config.py  console.py  exceptions.py
api_forge/generators/: __init__.py  artifacts.py  auth.py  base.py  models.py  orchestrator.py  repositories.py  routers.py  schemas.py  services.py  tests.py
api_forge/json_metadata/: README.md  analyzer.py  converter.py  loader.py
api_forge/schema_org/: __init__.py  analyzer.py  fetcher.py  models.py  parser.py  property_type.py  relationship_resolver.py  type_mapper.py  validation_extractor.py
api_forge/templates/: __init__.py  project.py
api_forge/templates/code/: auth.py.jinja  dependencies.py.jinja  exception_handlers.py.jinja  exceptions.py.jinja  middleware_correlation.py.jinja  middleware_logging.py.jinja  middleware_rate_limit.py.jinja  model.py.jinja  repository.py.jinja  router.py.jinja  schema.py.jinja  security.py.jinja  service.py.jinja  user_model.py.jinja  utils_filtering.py.jinja  utils_pagination.py.jinja
tests/: __init__.py
tests/test_json_metadata/: test_loader.py
tests/test_schema_org/: __init__.py  test_fetcher.py  test_type_mapper.py
